<resources>
    <string name="app_name" translatable="false">Journal App</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dirary">Diary</string>
    <string name="factory_title">New entry</string>
    <string name="login_title">Login</string>
    <string name="settings_title">Settings</string>
    <string name="diary_title_hint">Your diary title</string>
    <string name="diary_narration_hint">Speak it all out!</string>
    <string name="save_text">Save</string>
    <string name="delete_text">Delete draft</string>
    <string name="diary_saved_text">Diary successfully saved</string>
    <string name="number_0" translatable="false">0</string>
    <string name="draft_deleted_text">Diary deleted from draft</string>
    <string name="date_text">June 27, 2018</string>
    <string name="date_format" translatable="false">MMM dd, yyyy</string>
    <string name="time_format" translatable="false">hh:mm a</string>
    <string name="time_text">13:33</string>
    <string name="logout_text">Logout</string>
    <string name="login_text">Sign in to start saving your memories</string>
    <string name="arrow_text">Click down there to start</string>
    <string name="diaries_empty_text">Hmmm too much blank space here!!! \n\n  What\'s that plus sign for??</string>
    <string name="entry_saved_text">Entry saved successfully</string>
    <string name="draft_saved_text">Draft saved</string>
    <string name="error_no_title_text">A diary should have a title to be saved</string>
    <string name="error_no_narration_text">A diary should have a narration to be saved</string>
    <string name="delete_confirmation_text">Do you really want to give up on this piece of your memories?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="choose_image_source_text">Choose the image source</string>
    <string name="camera_text">Camera</string>
    <string name="storage_text">Storage</string>
    <string name="share_text">Share</string>
    <string name="share_chooser_title">Share this diary</string>
    <string name="created_on_text">Created in JI on\ </string>
    <string name="created_at_text">\ at\ </string>
</resources>
